aggregation and transform pipeline, block number timestamp

--- a/event/specs/aggregate.yml
+++ b/event/specs/aggregate.yml
@@ -15,6 +15,7 @@ parameters:
     in: query
     type: string
     required: true
+    description: eg sum, count, average
   - name: filter_options
     in: query
     type: string
