--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiodns==3.1.1
 aiohttp==3.8.6
 aiosignal==1.3.1
 alembic==1.8.1
@@ -10,13 +11,16 @@ bitarray==2.8.2
 blinker==1.6.2
 boto3==1.26.119
 botocore==1.29.119
+ccxt==4.1.79
 celery==5.2.7
 certifi==2022.12.7
+cffi==1.16.0
 charset-normalizer==3.1.0
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cryptography==41.0.7
 cytoolz==0.12.2
 dnspython==2.4.2
 elastic-apm==6.15.1
@@ -57,7 +61,9 @@ parsimonious==0.9.0
 prompt-toolkit==3.0.38
 protobuf==4.25.0
 psutil==5.9.5
+pycares==4.4.0
 pycodestyle==2.10.0
+pycparser==2.21
 pycryptodome==3.19.0
 PyJWT==2.6.0
 pymongo==4.6.1
